@@ -12,7 +12,7 @@ TuneTempo,90
 & sharpf sharpc 4_4
 LG_1	!
 LA_2	B_4	Cr_8	Dr_16	Er_32	Fl_32	!
-HG_4 'hg	HA_4 'ha	HG_4	!t
+HG_4 'hg	HA_4 'ha	HG_4	!!t
 
 & sharpf sharpc
 ag LG_4	bg LA_4	cg B_4	dg C_4	!
